Add SQLite support

--- a/tuumes/phase2/src/main/resources/application.properties
+++ b/tuumes/phase2/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 server.servlet.context-path=/api
+
+spring.jpa.database-platform=group0153.conferencesystem.config.SQLiteDialect
+spring.jpa.hibernate.ddl-auto=update
+
+spring.datasource.url=jdbc:sqlite:database.sqlite
+spring.datasource.driver-class-name=org.sqlite.JDBC
+
+spring.datasource.username=group0153
+spring.datasource.password=password
+
+spring.jpa.show-sql=true
